--- a/META.yml
+++ b/META.yml
@@ -1,35 +1,34 @@
 ---
-name: X11-Terminal
-version: 0.4
+abstract: 'Create customised X11 terminal windows'
 author:
   - 'Evan Giles <egiles@cpan.org>'
-abstract: Create customised X11 termnal windows
-license: perl
-requires:
-  Moose: 0.54
-  perl: v5.6.1
+build_requires: {}
 configure_requires:
-  Module::Build: 0.340201
-generated_by: Module::Build version 0.340201
+  Module::Build: 0.38
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
+name: X11-Terminal
 provides:
   X11::Terminal:
     file: lib/X11/Terminal.pm
-    version: 0.4
+    version: v1.0.0
   X11::Terminal::GnomeTerminal:
     file: lib/X11/Terminal/GnomeTerminal.pm
-    version: 0.4
+    version: v1.0.0
   X11::Terminal::Konsole:
     file: lib/X11/Terminal/Konsole.pm
-    version: 0.4
+    version: v1.0.0
   X11::Terminal::XTerm:
     file: lib/X11/Terminal/XTerm.pm
-    version: 0.4
+    version: v1.0.0
+requires:
+  Moose: 0.54
+  perl: v5.6.1
 resources:
   license: http://dev.perl.org/licenses/
-  repository:
-    type: git
-    url: git://github.com/egiles/x11-terminal.git
-    web: http://github.com/egiles/x11-terminal
+  repository: http://github.com/egiles/x11-terminal
+version: v1.0.0
